force-app/main/default/objects/CourseInstance__c/CourseInstance__c.object-meta.xml
<CustomObject>
    <description>Location specific details of a course</description>
    <label>Course Instance</label>
    <nameField>
        <displayFormat>AID-CI-{0000}</displayFormat>
        <label>Course Instance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Instance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>