force-app/main/default/objects/CourseInstance__c/fields/I_ST_Course_Instance_Webpage_URL__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Instance_Webpage_URL__c</fullName>
    <label>Course Instance Webpage URL</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>