force-app/main/default/objects/CourseInstance__c/fields/I_ST_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>I_ST_ExternalId__c</fullName>
    <description>Concatenation of Course Parent Code, Course Parent Version Number, Course Parent Version Year, Course Instance Code, Course Instance Version Number and Course Instance Version Year</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>