force-app/main/default/objects/CourseInstance__c/fields/I_ST_Published_On_Handbook__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Published_On_Handbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published On Handbook</label>
    <type>Checkbox</type>
</CustomField>