force-app/main/default/objects/CourseInstance__c/fields/I_ST_Scholarship_Details__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Scholarship_Details__c</fullName>
    <label>Scholarship Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>