force-app/main/default/objects/CourseInstance__c/fields/I_ST_School_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School_Code__c</fullName>
    <label>School Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>