force-app/main/default/objects/CourseInstance__c/fields/L_AD_ATAR_Intake_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_ATAR_Intake_Period_Name__c</fullName>
    <description>ATAR Intake Period Name</description>
    <label>Intake</label>
    <length>50</length>
    <type>Text</type>
</CustomField>