force-app/main/default/objects/CourseInstance__c/fields/L_AD_ATAR_Intake_Period_Year__c.field-meta.xml
<CustomField>
    <fullName>L_AD_ATAR_Intake_Period_Year__c</fullName>
    <description>ATAR Intake Year</description>
    <label>Intake Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>