force-app/main/default/objects/CourseInstance__c/fields/L_AD_Available_For_Domestic__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Available_For_Domestic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Domestic Intake allowed for the course</description>
    <label>Domestic</label>
    <type>Checkbox</type>
</CustomField>