force-app/main/default/objects/CourseInstance__c/fields/L_AD_Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Campus_Code__c</fullName>
    <label>Campus Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>