force-app/main/default/objects/CourseInstance__c/fields/L_AD_Campus_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Campus_Name__c</fullName>
    <description>Campus Name</description>
    <label>Campus</label>
    <length>64</length>
    <type>Text</type>
</CustomField>