force-app/main/default/objects/CourseInstance__c/fields/L_AD_College_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_College_Code__c</fullName>
    <description>College Code</description>
    <label>College Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>