force-app/main/default/objects/CourseInstance__c/fields/L_AD_College_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_College_Name__c</fullName>
    <label>College</label>
    <length>64</length>
    <type>Text</type>
</CustomField>