force-app/main/default/objects/CourseInstance__c/fields/L_AD_Count_Approved_Course_Availability__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Count_Approved_Course_Availability__c</fullName>
    <description>Number of &apos;Approved&apos; Course Availability</description>
    <label># Approved Course Availability</label>
    <summaryFilterItems>
        <field>CourseAvailability__c.L_AD_Course_Availability_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>CourseAvailability__c.L_AD_CourseInstance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>