force-app/main/default/objects/CourseInstance__c/fields/L_AD_Count_Approved_VTAC_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Count_Approved_VTAC_Code__c</fullName>
    <description>Number of &apos;Approved&apos; VTAC Codes</description>
    <label># Approved VTAC Code</label>
    <summaryFilterItems>
        <field>VTACCourseCode__c.L_AD_VTAC_Code_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>VTACCourseCode__c.L_AD_CourseInstance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>