force-app/main/default/objects/CourseInstance__c/fields/L_AD_Count_Draft_VTAC_Codes__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Count_Draft_VTAC_Codes__c</fullName>
    <description>Number of VTAC Codes in Draft Status</description>
    <label># Draft VTAC Codes</label>
    <summaryFilterItems>
        <field>VTACCourseCode__c.L_AD_VTAC_Code_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </summaryFilterItems>
    <summaryForeignKey>VTACCourseCode__c.L_AD_CourseInstance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>