force-app/main/default/objects/CourseInstance__c/fields/L_AD_Course_Instance_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Instance_Code__c</fullName>
    <description>Course Instance Code</description>
    <externalId>true</externalId>
    <label>Course Instance Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>