force-app/main/default/objects/CourseInstance__c/fields/L_AD_Course_Instance_Status__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Instance_Status__c</fullName>
    <description>Course Instance Status</description>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>