force-app/main/default/objects/CourseInstance__c/fields/L_AD_Course_Parent_Award_Title__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Award_Title__c</fullName>
    <description>Course Parent Award Title</description>
    <label>Award</label>
    <length>255</length>
    <type>Text</type>
</CustomField>