force-app/main/default/objects/CourseInstance__c/fields/L_AD_Course_Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Code__c</fullName>
    <description>Course Parent Code</description>
    <label>Course Parent Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>