force-app/main/default/objects/CourseInstance__c/fields/L_AD_Course_Parent_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Version_Number__c</fullName>
    <description>Course Parent Version Number</description>
    <label>Course Parent Version Number</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>