force-app/main/default/objects/CourseInstance__c/fields/L_AD_Course_Type__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Type__c</fullName>
    <formula>L_AD_CourseParent__r.L_AD_Course_Type_Name__c</formula>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>