force-app/main/default/objects/CourseInstance__c/fields/L_AD_CourseParent__c.field-meta.xml
<CustomField>
    <fullName>L_AD_CourseParent__c</fullName>
    <label>Course Parent ID</label>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipLabel>Course Instance</relationshipLabel>
    <relationshipName>Course_Instance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>