force-app/main/default/objects/CourseInstance__c/fields/L_AD_CRICOS_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_CRICOS_Code__c</fullName>
    <description>CRICOS Code for the course</description>
    <label>CRICOS Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>