force-app/main/default/objects/CourseInstance__c/fields/L_AD_Domestic_Study_Modes_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Domestic_Study_Modes_Full_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intake allowed for Full Time course</description>
    <label>Available For Full Time</label>
    <type>Checkbox</type>
</CustomField>