force-app/main/default/objects/CourseInstance__c/fields/L_AD_Domestic_Study_Modes_Mixed_Mode__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Domestic_Study_Modes_Mixed_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intake allowed for Mixed mode of course delivery</description>
    <label>Available For Mixed Mode</label>
    <type>Checkbox</type>
</CustomField>