force-app/main/default/objects/CourseInstance__c/fields/L_AD_Highest_Offered_ATAR__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Highest_Offered_ATAR__c</fullName>
    <description>Highest Offer ATAR</description>
    <label>Highest Offer ATAR</label>
    <length>32</length>
    <type>Text</type>
</CustomField>