force-app/main/default/objects/CourseInstance__c/fields/L_AD_Image_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Image_Needs_Review__c</fullName>
    <formula>IF( L_AD_Review_Flag__c = TRUE  &amp;&amp;  $User.ProfileId = &quot;00e4Y000000M8BE&quot;, IMAGE(&quot;/aid/s/exclammation.png&quot;,&quot;*&quot;,25,25), 
IF( L_AD_Review_Flag__c = TRUE  &amp;&amp;  $User.ProfileId = &quot;00e7F000002pVYI&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0684Y0000009LXsQAM&quot;,&quot;*&quot;,25,25),&quot;&quot;))</formula>
    <label>Needs Review</label>
    <type>Text</type>
</CustomField>