force-app/main/default/objects/CourseInstance__c/fields/L_AD_Lowest_Offered_Selection_Rank__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Lowest_Offered_Selection_Rank__c</fullName>
    <description>Lowest Offer Selection Rank</description>
    <label>Lowest Offer Selection Rank</label>
    <length>32</length>
    <type>Text</type>
</CustomField>