force-app/main/default/objects/CourseInstance__c/fields/L_AD_Manually_Turned_Off__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Manually_Turned_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Needs Review flag was manually turned off.</description>
    <label>Manually Turned Off</label>
    <type>Checkbox</type>
</CustomField>