force-app/main/default/objects/CourseInstance__c/fields/L_AD_Onshore_Study_Modes_Accelerated__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Onshore_Study_Modes_Accelerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For Accelerated</label>
    <type>Checkbox</type>
</CustomField>