force-app/main/default/objects/CourseInstance__c/fields/L_AD_Parent_Withhold_from_Publication__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Parent_Withhold_from_Publication__c</fullName>
    <formula>L_AD_CourseParent__r.L_AD_Withhold_From_Publication__c</formula>
    <label>Withhold from Publication</label>
    <type>Checkbox</type>
</CustomField>