force-app/main/default/objects/CourseInstance__c/fields/L_AD_Published_on_Find_A_Course__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Published_on_Find_A_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Course Instance published on Find a Course</description>
    <label>Published on Find A Course</label>
    <type>Checkbox</type>
</CustomField>