force-app/main/default/objects/CourseInstance__c/fields/L_AD_Published_on_VTAC__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Published_on_VTAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Course Instance published on VTAC</description>
    <label>Published on VTAC</label>
    <type>Checkbox</type>
</CustomField>