force-app/main/default/objects/CourseInstance__c/fields/L_AD_Review_Flag__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Review_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to be checked if interactions to be flagged.</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>