force-app/main/default/objects/CourseInstance__c/fields/L_AD_Study_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Study_Level_Code__c</fullName>
    <formula>L_AD_CourseParent__r.L_AD_Study_Level_Code__c</formula>
    <label>Study Level</label>
    <type>Text</type>
</CustomField>