force-app/main/default/objects/CourseInstance__c/fields/L_AD_Third_Party_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Third_Party_Provider_Name__c</fullName>
    <description>Name of third party provider for the course</description>
    <label>Third Party Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>