force-app/main/default/objects/CourseInstance__c/fields/L_AD_UAC_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_UAC_Code__c</fullName>
    <description>UAC Code for the course.</description>
    <label>UAC Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>