force-app/main/default/objects/CourseInstance__c/fields/L_AD_Withhold_From_Publication__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Withhold_From_Publication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Withhold The Course Instance from being published</description>
    <label>Withhold From Publication</label>
    <type>Checkbox</type>
</CustomField>