force-app/main/default/objects/CourseInstance__c/listViews/I_ST_All_Course_Instance.listView-meta.xml
<ListView>
    <fullName>I_ST_All_Course_Instance</fullName>
    <columns>NAME</columns>
    <columns>L_AD_Campus_Name__c</columns>
    <columns>L_AD_Course_Instance_Version_Year__c</columns>
    <columns>L_AD_Course_Instance_Version_Number__c</columns>
    <columns>L_AD_Course_Instance_Code__c</columns>
    <columns>L_AD_Course_Instance_Status__c</columns>
    <columns>L_AD_Course_Parent_Code__c</columns>
    <columns>L_AD_CourseParent__c</columns>
    <columns>L_AD_Course_Parent_Award_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - SACE</label>
</ListView>